--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,8 @@
   "rewrites": [
     { "source": "/dashboard/ai/analyze", "destination": "/dashboard/server.js" },
     { "source": "/dashboard/api/chat", "destination": "/dashboard/server.js" },
+    { "source": "/dashboard", "destination": "/dashboard/index.html" },
+    { "source": "/dashboard/", "destination": "/dashboard/index.html" },
     { "source": "/dashboard/(.*)", "destination": "/dashboard/$1" },
     { "source": "/(.*)", "destination": "/index.html" }
   ],
