--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,55 @@
 {
   "version": 2,
   "builds": [
+
     { "src": "index.html", "use": "@vercel/static" },
     { "src": "quotes.html", "use": "@vercel/static" },
     { "src": "store.html", "use": "@vercel/static" },
     { "src": "assets/**/*", "use": "@vercel/static" },
     { "src": "book/**/*", "use": "@vercel/static" },
-    { "src": "resultados/**/*", "use": "@vercel/static" }
+    { "src": "resultados/**/*", "use": "@vercel/static" },
     { "src": "dashboard/**/*", "use": "@vercel/static" }
+  ],
+
+  "rewrites": [
+    { "source": "/dashboard/ai/analyze", "destination": "/dashboard/server.js" },
+    { "source": "/dashboard/api/chat", "destination": "/dashboard/server.js" },
+    { "source": "/dashboard", "destination": "/dashboard/index.html" },
+    { "source": "/dashboard/", "destination": "/dashboard/index.html" },
+    { "source": "/dashboard/(.*)", "destination": "/dashboard/$1" },
+    { "source": "/(.*)", "destination": "/index.html" }
+  ],
+
+  "redirects": [
+    {
+      "source": "/resultados/FLAxRAC22102025",
+      "destination": "/resultados/FLAxRAC22102025/index.html",
+      "permanent": false
+    },
+    {
+      "source": "/resultados/FLAxRAC22102025/redirect",
+      "destination": "https://www.osinvictos.com.br/dashboard/flamengo/index.html",
+      "permanent": false
+    }
+  ],
+
+  "headers": [
+    {
+      "source": "/resultados/FLAxRAC22102025/(.*)",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=3600" },
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Content-Type", "value": "text/html; charset=UTF-8" }
+      ]
+    },
+    {
+      "source": "/resultados/FLAxRAC22102025/bgFLAxRAC1a0.png",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=86400" },
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Content-Type", "value": "image/png" }
+      ]
+    }
   ]
 }
 
