--- a/vercel.json
+++ b/vercel.json
@@ -6,8 +6,7 @@
     { "src": "store.html", "use": "@vercel/static" },
     { "src": "assets/**/*", "use": "@vercel/static" },
     { "src": "book/**/*", "use": "@vercel/static" },
-    { "src": "resultados/**/*", "use": "@vercel/static" },
-    { "src": "dashboard/**/*", "use": "@vercel/static" }
+    { "src": "resultados/**/*", "use": "@vercel/static" }
   ],
 
   "rewrites": [
